RESOLVED FIXED68351
[chromium]ClearFocusedNode doesn't clear the cursor or selection in editable div element.
https://bugs.webkit.org/show_bug.cgi?id=68351
Summary [chromium]ClearFocusedNode doesn't clear the cursor or selection in editable ...
chandra shekar vallala
Reported 2011-09-19 05:41:44 PDT
ClearFocusedNode should clear selection of editable div node. Otherwise div node will still process the keyboard events even though focus has removed for the node. The current implementation works for only text-filed and textarea.
Attachments
patch for bug (1.39 KB, patch)
2011-09-19 05:49 PDT, chandra shekar vallala
fishd: review-
updated patch (1.56 KB, patch)
2011-09-21 02:21 PDT, chandra shekar vallala
no flags
chandra shekar vallala
Comment 1 2011-09-19 05:49:51 PDT
Created attachment 107840 [details] patch for bug
Darin Fisher (:fishd, Google)
Comment 2 2011-09-19 10:41:07 PDT
Comment on attachment 107840 [details] patch for bug View in context: https://bugs.webkit.org/attachment.cgi?id=107840&action=review > Source/WebKit/chromium/src/WebViewImpl.cpp:1806 > + || (oldFocusedNode->hasTagName(HTMLNames::divTag) Any block element can be made content editable. Checking only for a DIV tag seems a bit too restrictive.
chandra shekar vallala
Comment 3 2011-09-21 02:21:47 PDT
Created attachment 108126 [details] updated patch updated patch as per comment.
WebKit Review Bot
Comment 4 2011-09-21 09:38:56 PDT
Comment on attachment 108126 [details] updated patch Clearing flags on attachment: 108126 Committed r95640: <http://trac.webkit.org/changeset/95640>
WebKit Review Bot
Comment 5 2011-09-21 09:39:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.