[chromium]ClearFocusedNode doesn't clear the cursor or selection in editable div element. https://bugs.webkit.org/show_bug.cgi?id=68351

Patch by chandra shekar vallala <chandra.vallala@gmail.com> on 2011-09-21
Reviewed by Darin Fisher.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::clearFocusedNode):

Canonical link: https://commits.webkit.org/84485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95640 268f45cc-cd09-0410-ab3c-d52691b4dbfc